      matching zlib.+.  Thanks, Mark Brown.
  * checks/fields.desc:
    + [ADB] Re-order the fields of build-depends-on-build-essential so that
      all of the descriptive text is included.  Thanks, Jonathan Wiltshire.
      (Closes: #557786)

  * frontend/lintian:
    + [RA] Add options --suppress-tags and --suppress-tags-from-file to
      completely suppress the given tags.

  * lib/Tags.pm:
    + [RA] Support suppressing a list of tags.

  * man/lintian.1:
    + [RA] Document --suppress-tags and --suppress-tags-from-file.

  * t/runtests:
    + [RA] Unwrap the Options field so that it can be continued.
    + [RA] Replace TESTSET in Options with the root of the test suite so
      that Lintian options referring to files can be tested with files in
      the test suite directory.

 -- Russ Allbery <rra@debian.org>  Mon, 23 Nov 2009 02:20:29 -0800

lintian (2.2.18) unstable; urgency=low

  The "synchronize severities with ftpmaster's Lintian checks" release.

  * Summary of tag changes:
    + Removed:
      - copyright-lists-upstream-authors-with-dh_make-boilerplate
    + Promoted from experimental:
      - spelling-error-in-binary
      - template-uses-unsplit-choices

  * checks/binaries.desc:
    + [RA] Remove experimental marker on spelling-error-in-binary.  Change
      severity to minor; spelling errors are minor bugs.
    + [RA] library-in-debug-or-profile-should-not-be-stripped,
      binary-or-shlib-defines-rpath, arch-dependent-file-in-usr-share, and
      binary-in-etc, binary-file-compressed-with-upx,
      binary-with-bad-dynamic-table, and embedded-zlib are now
      serious since they can result in ftpmaster rejects.  embedded-zlib,
      missing-dependency-on-libc, and binary-or-shlib-defines-rpath are
      possible rather than certain since overrides are allowed.
  * checks/changelog-file:
    + [FL] Avoid various Perl warnings which can be caused by
      completly broken changelog files.
  * checks/conffiles.desc: