@@ -1,0 +1,5 @@
+Testname: lintian-check-tags-file
+Sequence: 2500
+Version: 1.0
+Description: Test checking a specific list of tags from a file
+Options: --tags-from-file TESTSET/tests/lintian-check-tags-file/tag-list
