@@ -14,12 +14,14 @@ lintian (2.2.19) UNRELEASED; urgency=low
   * frontend/lintian:
     + [RA] Add options --suppress-tags and --suppress-tags-from-file to
       completely suppress the given tags.
+    + [RA] Support comments and blank lines in --tags-from-file files.
 
   * lib/Tags.pm:
     + [RA] Support suppressing a list of tags.
 
   * man/lintian.1:
     + [RA] Document --suppress-tags and --suppress-tags-from-file.
+    + [RA] Document format of --tags-from-file.
 
   * t/runtests:
     + [RA] Unwrap the Options field so that it can be continued.
